Fix viewport height on irydium.dev (#218)
It didn't incorporate some border stuff, which led to unwanted vertical
scrollbars appearing.

--- a/packages/site/static/global.css
+++ b/packages/site/static/global.css
@@ -7,10 +7,6 @@ html {
   border-collapse: collapse;
 }
 
-html {
-  height: 100%;
-}
-
 body {
   margin: 0;
   font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
@@ -20,7 +16,8 @@ body {
   color: #333;
 
   --font-mono: "Fira Mono", monospace;
-  --nav-h: 56px;
+  --nav-h: 58px;
+  --nav-h-border: 1px;
 }
 
 /*      theme vars */
